Comencé a agregar las tarjetas de tipos de cursos

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header class="bg-dark pt-4">
+    <header class="bg-dark pt-4 container-fluid">
         <div class="row">
             <a href="index.html" class="col-sm-12 col-md-4 col-lg-7 ps-5">
                 <img src="./assets/imagenes/home.png" alt="Logo ORIENT">
@@ -26,26 +26,26 @@
             </nav>
         </div>
     </header>
-    <main>
+    <main class="container-fluid">
         <section class="primera-seccion row bg-black pt-5">
-            <div class="col-7">
-                <p class="titulo-principal">Explota todas tus capacidades.</p>
-                <p class="descripcion-orientate pt-4 pb-5">Orient® es una institución en donde conocemos lo difícil que
+            <div class="col-sm-12 col-md-6 col-lg-6">
+                <p class="titulo-principal text-end">Explota todas tus capacidades.</p>
+                <p class="descripcion-orientate pt-4 pb-5 text-end">Orient® es una institución en donde conocemos lo difícil que <br>
                     es querer sobresalir sin tener una ventaja previa sobre los demás.
                     <br>
                     <br>
                     ¡Vuélvete el mejor en lo que quieres ser!
                 </p>
             </div>
-            <div class="col">
-                <img src="./assets/imagenes/bioquimico.png" alt="Quimico">
+            <div class="col-sm-12 col-md-6 col-lg-6 text-center">
+                <img class="imagen-quimico" src="./assets/imagenes/bioquimico.png" alt="Quimico">
             </div>
         </section>
         <section class="row bg-dark contenedor-de-fotos">
-            <div class="col-7">
+            <div class="col-sm-12 col-md-6 col-lg-7">
                 <p class="titulo-pregunta">¿Quiénes conformamos el equipo de Orient®?</p>
             </div>
-            <div id="carouselExampleCaptions" class="carousel slide col-4 ">
+            <div id="carouselExampleCaptions" class="carousel slide col-sm-12 col-md-6 col-lg-4">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                         aria-current="true" aria-label="Slide 1"></button>
@@ -91,10 +91,10 @@
             </div>
         </section>
         <section class="row bg-black contenedor-surgimiento">
-            <div class="col-7">
-                <p class="surgimiento">¿Cómo surgió Orient®?</p>
+            <div class="col-sm-12 col-md-6 col-lg-7">
+                <p class="surgimiento text-center">¿Cómo surgió Orient®?</p>
             </div>
-            <div class=" col-4 text-white surgimiento-parrafo border border-warning rounded-5">
+            <div class=" col-sm-12 col-md-6 col-lg-4 text-white surgimiento-parrafo border border-warning rounded-5">
                 <p>Cuando ya tienes una idea de cuál es tu vocación y te quieres dedicar a ello, es fácil que te
                     apasione, pero esto no basta para sobresalir en un mundo tan competitivo como en el que nos
                     encontramos. <br> <br>Pensamos que si cada futuro médico, ingeniero, contador, diseñador, etc.
@@ -107,10 +107,10 @@
             </div>
         </section>
         <section class="row bg-dark contenedor-dedicacion">
-            <div class="col-7">
+            <div class="col-sm-12 col-md-6 col-lg-7">
                 <p class="pregunta-dedicacion">¿A qué nos dedicamos?</p>
             </div>
-            <div class="col-4 dedicacion-parrafo text-white border border-warning rounded-5">
+            <div class="col-sm-12 col-md-6 col-lg-4 dedicacion-parrafo text-white border border-warning rounded-5">
                 <p>Contamos con 3 áreas: Administración, Diseño y Medicina. <br> <br>
                     Dependiendo del área de aprendizaje a la que te dirijas, te llevará 6 meses aprender desde temas y
                     conceptos básicos, realizar prácticas y utilizar programas y herramientas que te enseñarán hasta que
@@ -122,15 +122,15 @@
             </div>
         </section>
     </main>
-    <footer class=" bg-black">
-        <ul class="texto-footer nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Inicio</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Opiniones</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Contacto</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Sucursales</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Preguntas frecuentes</a></li>
+    <footer class="bg-black container-fluid">
+        <ul class="texto-footer nav justify-content-center border-bottom pb-3 pt-5 mb-3">
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-dark-emphasis">Inicio</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-dark-emphasis">Opiniones</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-dark-emphasis">Contacto</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-dark-emphasis">Sucursales</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-dark-emphasis">Preguntas frecuentes</a></li>
         </ul>
-        <p class="texto-footer text-center text-white">&copy; 2023 Orient SA. de. CV.</p>
+        <p class="texto-footer text-center text-dark-emphasis pb-3 pt-4">&copy; 2023 Orient SA. de. CV.</p>
     </footer>
 
 
