Agregué las instrucciones de registro y el título de otros cursos

--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -4,90 +4,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HUGO - Categorías</title>
-    <link rel="shortcut icon" href="../assets/imagenes/logo_hugo_icon.png" type="image/x-icon">
+    <title>ORIENT</title>
+    <link rel="shortcut icon" href="../assets/imagenes/home_orient_icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
-<body class="bodyCategorias">
+<body>
     <header>
-        <a href="../index.html" class="logoHugo">
-            <img src="../assets/imagenes/Logo_hugo.png" alt="Logo HUGO">
-        </a>
-        <nav>
-            <a href="#"><img src="../assets/imagenes/barra_de_busqueda2.png" class="barraDeBusqueda"
-                    alt="Barra de búsqueda"></a>
-            <a href="../index.html">Inicio</a>
-            <a href="./novedades.html">Novedades</a>
-            <a href="./masdescargadas.html">Más descargadas</a>
-            <a href="./sercreador.html">¿Quieres ser creador?</a>
-        </nav>
+        <section class="barra-de-navegacion">
+            <div class="logo-esquina">
+                <a href="../index.html"><img src="../assets/imagenes/home.png" alt="Inicio"></a>
+            </div>
+            <div>
+                <nav class="nav-cursos">
+                    <ul>
+                        <li><a href="../index.html">Inicio</a></li>
+                        <li><a href="./examenes.html">Exámenes simulacro</a></li>
+                        <li><a href="./material.html">Material</a></li>
+                        <li><a href="./contacto.html">Contacto</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </section>
     </header>
     <main>
-        <section class="sectionMensajeDeBienvenida">
-            <h5>Bienvenido, elige la categoría que más te interese.</h5>
+        <section>
+            <div class="titulos-superiores">
+                <h2>¡Poca disponibilidad!</h2>
+                <h1>
+                    CURSOS DISPONIBLES:
+                </h1>
+            </div>
         </section>
-        <section class="sectionCategoriasCatalogo">
-            <div>
-                <ul>
-                    <a href="#">
-                        <li>Animales</li>
-                    </a>
-                    <a href="#">
-                        <li>Animación</li>
-                    </a>
-                    <a href="#">
-                        <li>Arte y diseño</li>
-                    </a>
-                    <a href="#">
-                        <li>Arquitectura</li>
-                    </a>
-                    <a href="#">
-                        <li>Ciudades</li>
-                    </a>
-                    <a href="#">
-                        <li>Diseño digital</li>
-                    </a>
-                    <a href="#">
-                        <li>Deportes</li>
-                    </a>
-                    <a href="#">
-                        <li>Famosos y modelos</li>
-                    </a>
-                    <a href="#">
-                        <li>Festividades</li>
-                    </a>
-                    <a href="#">
-                        <li>Flores</li>
-                    </a>
-                    <a href="#">
-                        <li>Minimalismo</li>
-                    </a>
-                    <a href="#">
-                        <li>Naturaleza</li>
-                    </a>
-                    <a href="#">
-                        <li>Neón</li>
-                    </a>
-                    <a href="#">
-                        <li>Videojuegos</li>
-                    </a>
-                    <a href="#">
-                        <li>Paisajes</li>
-                    </a>
-                    <a href="#">
-                        <li>Playa y océano</li>
-                    </a>
-                    <a href="#">
-                        <li>Tecnología</li>
-                    </a>
-                    <a href="#">
-                        <li>Universo</li>
-                    </a>
-                    <a href="#">
-                        <li>Vehículos</li>
-                    </a>
-                </ul>
+        <section class="section-grids">
+            <div class="tarjeta-medicina">
+                <h2 class="titulo-tarjeta-medicina">MEDICINA</h2>
+                <p class="parrafo-superior-medicina">Curso de introducción al área de medicina.</p>
+                <img class="imagen-profesion" src="../assets/imagenes/doctor.png" alt="Doctor">
+
+            </div>
+            <div class="tarjeta-administracion">
+                <h2 class="titulo-tarjeta-administracion">ADMINISTRACIÓN</h2>
+                <p class="parrafo-superior-administracion">Curso de introducción al área de administración.</p>
+                <img class="imagen-profesion" src="../assets/imagenes/contador.png" alt="Contador">
+            </div>
+            <div class="tarjeta-diseño">
+                <h2 class="titulo-tarjeta-diseño">DISEÑO</h2>
+                <p class="parrafo-superior-diseño">Curso de introducción al área de diseño.</p>
+                <img class="imagen-profesion" src="../assets/imagenes/disenador.png" alt="Diseñador">
             </div>
         </section>
     </main>
