--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ORIENT</title>
+    <link rel="shortcut icon" href="./assets/imagenes/home_orient_icon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -18,10 +19,10 @@
             </a>
             <nav class="col-sm-12 col-md-8 col-lg-5 pe-5">
                 <ul class="d-flex gap-5 pt-4  justify-content-end">
-                    <li><a href="">Cursos</a></li>
-                    <li><a href="">Exámenes simulacro</a></li>
-                    <li><a href="">Material</a></li>
-                    <li><a href="">Contacto</a></li>
+                    <li><a href="./pages/cursos.html">Cursos</a></li>
+                    <li><a href="./pages/examenes.html">Exámenes simulacro</a></li>
+                    <li><a href="./pages/material.html">Material</a></li>
+                    <li><a href="./pages/contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
