Agregué todos los cursos solo falta el footer

--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -32,26 +32,150 @@
             <div class="titulos-superiores">
                 <h2>¡Poca disponibilidad!</h2>
                 <h1>
-                    CURSOS DISPONIBLES:
+                    CURSOS:
                 </h1>
             </div>
         </section>
         <section class="section-grids">
             <div class="tarjeta-medicina">
-                <h2 class="titulo-tarjeta-medicina">MEDICINA</h2>
-                <p class="parrafo-superior-medicina">Curso de introducción al área de medicina.</p>
-                <img class="imagen-profesion" src="../assets/imagenes/doctor.png" alt="Doctor">
-
+                <a href="#">
+                    <h2 class="titulo-tarjeta-medicina">MEDICINA</h2>
+                    <p class="parrafo-superior-medicina">Curso de introducción al área de medicina.</p>
+                    <img class="imagen-profesion" src="../assets/imagenes/doctor.png" alt="Doctor">
+                    <p class="disponible-tarjeta">DISPONIBLE<br>PRESENCIAL</p>
+                    <p class="descripcion-tarjeta">Curso de introducción al área de medicina. <br>
+                        Impartido por profesionales en sus campos, este curso está diseñado para que en 6 meses obtengas
+                        conocimientos básicos e intermedios, así como experiencia básica en el área de la medicina y la
+                        enfermería.
+                    </p>
+                    <ul class="lista-de-contenido">
+                        <li>Anatomía</li>
+                        <li>Embriología Humana</li>
+                        <li>Historología</li>
+                        <li>Bioquímica Humana</li>
+                        <li>Fisiología Humana</li>
+                        <li>Técnicas quirúrgicas (taller)</li>
+                </a>
+                </ul>
             </div>
             <div class="tarjeta-administracion">
-                <h2 class="titulo-tarjeta-administracion">ADMINISTRACIÓN</h2>
-                <p class="parrafo-superior-administracion">Curso de introducción al área de administración.</p>
-                <img class="imagen-profesion" src="../assets/imagenes/contador.png" alt="Contador">
+                <a href="">
+                    <h2 class="titulo-tarjeta-administracion">ADMINISTRACIÓN</h2>
+                    <p class="parrafo-superior-administracion">Curso de introducción al área de administración.</p>
+                    <img class="imagen-profesion" src="../assets/imagenes/contador.png" alt="Contador">
+                    <p class="disponible-tarjeta">DISPONIBLE<br>PRESENCIAL</p>
+                    <p class="descripcion-tarjeta">Curso de introducción al área de administración. <br>
+                        Impartido por profesionales en sus campos, este curso está diseñado para que en 6 meses obtengas
+                        conocimientos básicos e intermedios, así como experiencia básica en el área de las ciencias
+                        sociales
+                        y humanidades.
+                    </p>
+                    <ul class="lista-de-contenido">
+                        <li>Conceptos de administración</li>
+                        <li>Matemáticas para negocios</li>
+                        <li>Fundamentos de negocios</li>
+                        <li>Economía</li>
+                        <li>Contabilidad</li>
+                        <li>Mercadotecnia</li>
+                    </ul>
+                </a>
             </div>
             <div class="tarjeta-diseño">
-                <h2 class="titulo-tarjeta-diseño">DISEÑO</h2>
-                <p class="parrafo-superior-diseño">Curso de introducción al área de diseño.</p>
-                <img class="imagen-profesion" src="../assets/imagenes/disenador.png" alt="Diseñador">
+                <a href="">
+                    <h2 class="titulo-tarjeta-diseño">DISEÑO</h2>
+                    <p class="parrafo-superior-diseño">Curso de introducción al área de diseño general.</p>
+                    <img class="imagen-profesion" src="../assets/imagenes/disenador.png" alt="Diseñador">
+                    <p class="disponible-tarjeta">DISPONIBLE<br>PRESENCIAL</p>
+                    <p class="descripcion-tarjeta">Curso de introducción al diseño. <br>
+                        Impartido por profesionales en sus campos, este curso está diseñado para que en 6 meses obtengas
+                        conocimientos y experiencia básicos en el área de diseño con sus distintas variedades.
+                    </p>
+                    <ul class="lista-de-contenido">
+                        <li>Conceptos de diseño</li>
+                        <li>Geometría descriptiva</li>
+                        <li>Teoría del color</li>
+                        <li>Corrientes artísticas</li>
+                        <li>Diseño orientado</li>
+                        <li>AutoCad y Solid Works</li>
+                    </ul>
+                </a>
+            </div>
+        </section>
+        <section class="registro">
+            <div class="titulo-registro">
+                <h1>REGISTRO:</h1>
+            </div>
+            <div class="instruccion-registro">
+                <p>Para registrarte a cualquiera de nuestros cursos da clic sobre él.</p>
+            </div>
+        </section>
+        <section>
+            <div class="otros-cursos">
+                <h1>
+                    OTROS CURSOS:
+                </h1>
+            </div>
+        </section>
+        <section class="section-grids-2">
+            <div class="tarjeta-ingenieria">
+                <a href="#">
+                    <h2 class="titulo-tarjeta-ingenieria">INGENIERÍA</h2>
+                    <p class="parrafo-superior-ingenieria">Curso de introducción al área de ingenierías.</p>
+                    <img class="imagen-profesion" src="../assets/imagenes/clase-virtual.png" alt="Ingeniería">
+                    <p class="disponible-tarjeta">DISPONIBLE<br>VIRTUAL (CLASES PREGRABADAS)</p>
+                    <p class="descripcion-tarjeta">Curso de introducción al área de ingenierías. <br>
+                        Impartido por profesionales en sus campos, este curso está diseñado para que en 6 meses obtengas
+                        conocimientos básicos e intermedios, así como experiencia básica en el área de las distinas ingenierías.
+                    </p>
+                    <ul class="lista-de-contenido">
+                        <li>Repaso de aritmética</li>
+                        <li>Repaso de álgebra</li>
+                        <li>Álgebra avanzada</li>
+                        <li>Cálculo diferencial e integral</li>
+                        <li>Geometría analítica</li>
+                        <li>Matemáticas aplicadas (taller)</li>
+                </a>
+                </ul>
+            </div>
+            <div class="tarjeta-arquitectura">
+                <a href="">
+                    <h2 class="titulo-tarjeta-arquitectura">ARQUITECTURA</h2>
+                    <p class="parrafo-superior-arquitectura">Curso de introducción a la arquitectura moderna.</p>
+                    <img class="imagen-profesion" src="../assets/imagenes/clase-virtual.png" alt="Arquitectura">
+                    <p class="disponible-tarjeta">DISPONIBLE<br>VIRTUAL (CLASES PREGRABADAS)</p>
+                    <p class="descripcion-tarjeta">Curso de introducción a la arquitectura. <br>
+                        Impartido por profesionales en sus campos, este curso está diseñado para que en 6 meses obtengas
+                        conocimientos básicos e intermedios, así como experiencia básica en arquitectura.
+                    </p>
+                    <ul class="lista-de-contenido">
+                        <li>Conceptos de arquitectura</li>
+                        <li>Cálculo diferencial e integral</li>
+                        <li>Corrientes arquitectónicas</li>
+                        <li>Estructuras</li>
+                        <li>Instalaciones eléctricas y drenajes</li>
+                        <li>Maquetación (taller)</li>
+                    </ul>
+                </a>
+            </div>
+            <div class="tarjeta-programacion">
+                <a href="">
+                    <h2 class="titulo-tarjeta-programacion">PROGRAMACIÓN</h2>
+                    <p class="parrafo-superior-programacion">Curso de introducción a la programación en lenguaje C.</p>
+                    <img class="imagen-profesion" src="../assets/imagenes/clase-virtual.png" alt="Programación">
+                    <p class="disponible-tarjeta">DISPONIBLE<br>VIRTUAL (CLASES PREGRABADAS)</p>
+                    <p class="descripcion-tarjeta">Curso de introducción a la programación. <br>
+                        Impartido por profesionales en sus campos, este curso está diseñado para que en 6 meses obtengas
+                        conocimientos y experiencia básicos en programación.
+                    </p>
+                    <ul class="lista-de-contenido">
+                        <li>Introducción a la programación</li>
+                        <li>Porgramación de lenguaje C</li>
+                        <li>Funciones</li>
+                        <li>Diseño Estructurado</li>
+                        <li>Estructura de datos</li>
+                        <li>Archivos</li>
+                    </ul>
+                </a>
             </div>
         </section>
     </main>
