Terminé la sección de Examenes todavía sin responsive

--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -106,7 +106,7 @@
                 <h1>REGISTRO:</h1>
             </div>
             <div class="instruccion-registro">
-                <p>Para registrarte a cualquiera de nuestros cursos da clic sobre él.</p>
+                <p>Para ver los horarios disponibles y hacer tu registro a cualquiera de nuestros cursos haz clic sobre él.</p>
             </div>
         </section>
         <section>
@@ -125,7 +125,8 @@
                     <p class="disponible-tarjeta">DISPONIBLE<br>VIRTUAL (CLASES PREGRABADAS)</p>
                     <p class="descripcion-tarjeta">Curso de introducción al área de ingenierías. <br>
                         Impartido por profesionales en sus campos, este curso está diseñado para que en 6 meses obtengas
-                        conocimientos básicos e intermedios, así como experiencia básica en el área de las distinas ingenierías.
+                        conocimientos básicos e intermedios, así como experiencia básica en el área de las distinas
+                        ingenierías.
                     </p>
                     <ul class="lista-de-contenido">
                         <li>Repaso de aritmética</li>
@@ -180,19 +181,28 @@
         </section>
     </main>
     <footer>
-        <Section class="sectionFooter">
-            <a title="Facebook" href="https://www.facebook.com/" target="_blank"><img
+        <section class="section-footer">
+            <a title="Facebook" href="https://www.facebook.com/" target="_blank"><img class="imagen-redes"
                     src="../assets/imagenes/logo_facebook.png" alt="Logo Facebook"></a>
-            <a title="Twitter" href="https://twitter.com/?lang=es" target="_blank"><img
-                    src="../assets/imagenes/Logo_twitter.png" alt="Logo Twitter"></a>
-            <a title="Instagram" href="https://www.instagram.com" target="_blank"><img
+            <a title="Twitter" href="https://twitter.com/?lang=es" target="_blank"><img class="imagen-redes"
+                    src="../assets/imagenes/Logo_twitter.png" alt="Logo Twitter"></a> 
+            <a title="Instagram" href="https://www.instagram.com" target="_blank"><img class="imagen-redes"
                     src="../assets/imagenes/logo_instagram.png" alt="Logo Instagram"></a>
-            <a title="Pinterest" href="https://www.pinterest.com.mx/" target="_blank"><img
-                    src="../assets/imagenes/logo_pinterest.png" alt="Logo Pinterest"></a>
-            <a title="Threads" href="https://www.threads.net/" target="_blank"><img
-                    src="../assets/imagenes/logo_threads.png" alt="Logo Threads"></a>
-            <h6>Copyright© Hugo Miguel - All rights reserved</h6>
-        </Section>
+        </section>
+        <section class="footer-copyright">
+            <div >
+                <ul class="lista-opiniones">
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Opiniones</a></li>
+                    <li><a href="#">Contacto</a></li>
+                    <li><a href="#">Sucursales</a></li>
+                    <li><a href="#">Preguntas frecuentes</a></li>
+                </ul>
+            </div>
+            <div class="copyright">
+                <p>&copy; 2023 Orient SA. de. CV.</p>
+            </div>
+        </section>
     </footer>
 </body>
 
