Terminé EXAMENES excepto el responsive

--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -48,7 +48,8 @@
                         conocimientos básicos e intermedios, así como experiencia básica en el área de la medicina y la
                         enfermería.
                     </p>
-                    <ul class="lista-de-contenido">
+                </a>
+                    <a href="#"><ul class="lista-de-contenido">
                         <li>Anatomía</li>
                         <li>Embriología Humana</li>
                         <li>Historología</li>
