--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section class="primera-seccion row bg-black pt-5">
             <div class="col-sm-12 col-md-6 col-lg-6">
                 <p class="titulo-principal text-end">Explota todas tus capacidades.</p>
-                <p class="descripcion-orientate pt-4 pb-5 text-end">Orient® es una institución en donde conocemos lo difícil que <br>
+                <p class="descripcion-orient pt-4 pb-5 text-end">Orient® es una institución en donde conocemos lo difícil que <br>
                     es querer sobresalir sin tener una ventaja previa sobre los demás.
                     <br>
                     <br>
